fixing the horizontal scroll

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -29,4 +29,11 @@ h3 {
 img {
   width: 100%;
   height: 150px;
+}
+
+/* making the website responsive */
+@media screen and (max-width: 576px) {
+  .countries {
+    grid-template-columns: repeat(1, 1fr);
+  }
 }
